syntax = "proto3";
package proto;

option go_package = "./proto";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


message UserRequest {
    string first_name           = 1;
    string last_name            = 2;
    string gender               = 3;
    string email                = 4;
    string password             = 5;
    string address              = 6;
}

message UserResponse {
    string message = 1;
}


message UserUpdateRequest {
    string id                   = 1;
    string first_name           = 2;
    string last_name            = 3;
    string gender               = 4;
    string email                = 5;
    string password             = 6;
    string address              = 7;
}

message UserGetRequest {
    int64 page = 1;
    int64 per_page = 2;
}

message UserGetResponse {
    string message = 1;
    int64 total_page = 2;
    repeated UserUpdateRequest data = 3;
}

service UsersService {

    rpc Delete(UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            delete: "/api/v1/user"
        };
    }

    rpc Get(UserGetRequest) returns (UserGetResponse) {
        option (google.api.http) = {
            get: "/api/v1/user"
        };
    }

    rpc Update(UserUpdateRequest) returns (UserResponse) {
        option (google.api.http) = {
            put: "/api/v1/user"
        };
    }

    rpc Create(UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            post: "/api/v1/user"
            body: "*"
        };
    }

    rpc Login(UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            post: "/api/v1/login"
        };
    }
}

